--- a/datasets/Dataset Cleaning.ipynb
+++ b/datasets/Dataset Cleaning.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
    "id": "5072964a",
    "metadata": {},
    "outputs": [],
@@ -62,7 +62,7 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>0000997932d777bf</td>\n",
-       "      <td>Explanation\\r\\nWhy the edits made under my use...</td>\n",
+       "      <td>Explanation\\nWhy the edits made under my usern...</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -95,7 +95,7 @@
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>0001b41b1c6bb37e</td>\n",
-       "      <td>\"\\r\\nMore\\r\\nI can't make any real suggestions...</td>\n",
+       "      <td>\"\\nMore\\nI can't make any real suggestions on ...</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -139,7 +139,7 @@
        "    <tr>\n",
        "      <th>159567</th>\n",
        "      <td>ffea4adeee384e90</td>\n",
-       "      <td>You should be ashamed of yourself \\r\\n\\r\\nThat...</td>\n",
+       "      <td>You should be ashamed of yourself \\n\\nThat is ...</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -150,7 +150,7 @@
        "    <tr>\n",
        "      <th>159568</th>\n",
        "      <td>ffee36eab5c267c9</td>\n",
-       "      <td>Spitzer \\r\\n\\r\\nUmm, theres no actual article ...</td>\n",
+       "      <td>Spitzer \\n\\nUmm, theres no actual article for ...</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -172,7 +172,7 @@
        "    <tr>\n",
        "      <th>159570</th>\n",
        "      <td>fff46fc426af1f9a</td>\n",
-       "      <td>\"\\r\\nAnd ... I really don't think you understa...</td>\n",
+       "      <td>\"\\nAnd ... I really don't think you understand...</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -187,17 +187,17 @@
       ],
       "text/plain": [
        "                      id                                       comment_text  \\\n",
-       "0       0000997932d777bf  Explanation\\r\\nWhy the edits made under my use...   \n",
+       "0       0000997932d777bf  Explanation\\nWhy the edits made under my usern...   \n",
        "1       000103f0d9cfb60f  D'aww! He matches this background colour I'm s...   \n",
        "2       000113f07ec002fd  Hey man, I'm really not trying to edit war. It...   \n",
-       "3       0001b41b1c6bb37e  \"\\r\\nMore\\r\\nI can't make any real suggestions...   \n",
+       "3       0001b41b1c6bb37e  \"\\nMore\\nI can't make any real suggestions on ...   \n",
        "4       0001d958c54c6e35  You, sir, are my hero. Any chance you remember...   \n",
        "...                  ...                                                ...   \n",
        "159566  ffe987279560d7ff  \":::::And for the second time of asking, when ...   \n",
-       "159567  ffea4adeee384e90  You should be ashamed of yourself \\r\\n\\r\\nThat...   \n",
-       "159568  ffee36eab5c267c9  Spitzer \\r\\n\\r\\nUmm, theres no actual article ...   \n",
+       "159567  ffea4adeee384e90  You should be ashamed of yourself \\n\\nThat is ...   \n",
+       "159568  ffee36eab5c267c9  Spitzer \\n\\nUmm, theres no actual article for ...   \n",
        "159569  fff125370e4aaaf3  And it looks like it was actually you who put ...   \n",
-       "159570  fff46fc426af1f9a  \"\\r\\nAnd ... I really don't think you understa...   \n",
+       "159570  fff46fc426af1f9a  \"\\nAnd ... I really don't think you understand...   \n",
        "\n",
        "        toxic  severe_toxic  obscene  threat  insult  identity_hate  \n",
        "0           0             0        0       0       0              0  \n",
@@ -776,6 +776,14 @@
    "source": [
     "test_set.to_csv(\"./test_data.csv\", index=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4d1fbba3",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
