--- a/models/bert_boosted/neural_network_classifier.ipynb
+++ b/models/bert_boosted/neural_network_classifier.ipynb
@@ -14,26 +14,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 73,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/ss/s59pk8px01vb8p_b48z9wxz40000gn/T/ipykernel_7055/3020675255.py:1: DeprecationWarning: \n",
-      "Pyarrow will become a required dependency of pandas in the next major release of pandas (pandas 3.0),\n",
-      "(to allow more performant data types, such as the Arrow string type, and better interoperability with other libraries)\n",
-      "but was not found to be installed on your system.\n",
-      "If this would cause problems for you,\n",
-      "please provide us feedback at https://github.com/pandas-dev/pandas/issues/54466\n",
-      "        \n",
-      "  import pandas as pd\n",
-      "/Users/alessandropesare/anaconda3/envs/DL_CUDA/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -44,14 +27,15 @@
     "import matplotlib.pyplot as plt\n",
     "from transformers import DistilBertTokenizer, DistilBertModel\n",
     "from nltk.tokenize import word_tokenize\n",
-    "from sklearn.svm import SVC\n",
+    "from keras.models import Sequential\n",
+    "from keras.layers import Dense, Dropout\n",
     "from datetime import datetime\n",
     "from sklearn.metrics import accuracy_score,precision_score,recall_score, confusion_matrix, ConfusionMatrixDisplay"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -157,7 +141,7 @@
        "[30577 rows x 2 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -171,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -206,37 +190,174 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model_filename = 'nn_classifier.pkl'\n",
+    "model_lem_filename = 'nn_classifier_lem.pkl'\n",
+    "model = None\n",
+    "model_lem = None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
     "# define model\n",
     "model = Sequential()\n",
     "model.add(Dense(768, input_shape=(768,), activation='relu'))\n",
-    "model.add(Dense(, activation='relu'))\n",
-    "model.add(Dense(, activation='relu'))\n",
-    "model.add(Dense(1, activation='softmax'))"
+    "model.add(Dropout(0.5))  \n",
+    "model.add(Dense(534, activation='relu'))\n",
+    "model.add(Dropout(0.5))  \n",
+    "model.add(Dense(318, activation='relu'))\n",
+    "model.add(Dropout(0.5))  \n",
+    "model.add(Dense(109, activation='relu'))\n",
+    "model.add(Dropout(0.5))  \n",
+    "model.add(Dense(54, activation='relu'))\n",
+    "model.add(Dense(1, activation='sigmoid'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# compile the keras model\n",
+    "model.compile(loss='binary_crossentropy', optimizer='adam', metrics=['accuracy'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training started...\n",
+      "Epoch 1/50\n",
+      "956/956 [==============================] - 4s 4ms/step - loss: 0.3069 - accuracy: 0.8710\n",
+      "Epoch 2/50\n",
+      "956/956 [==============================] - 4s 4ms/step - loss: 0.2633 - accuracy: 0.8926\n",
+      "Epoch 3/50\n",
+      "956/956 [==============================] - 4s 4ms/step - loss: 0.2553 - accuracy: 0.8981\n",
+      "Epoch 4/50\n",
+      "956/956 [==============================] - 4s 4ms/step - loss: 0.2470 - accuracy: 0.9014\n",
+      "Epoch 5/50\n",
+      "956/956 [==============================] - 4s 4ms/step - loss: 0.2431 - accuracy: 0.9020\n",
+      "Epoch 6/50\n",
+      "956/956 [==============================] - 4s 4ms/step - loss: 0.2341 - accuracy: 0.9060\n",
+      "Epoch 7/50\n",
+      "956/956 [==============================] - 4s 4ms/step - loss: 0.2335 - accuracy: 0.9065\n",
+      "Epoch 8/50\n",
+      "956/956 [==============================] - 4s 4ms/step - loss: 0.2289 - accuracy: 0.9092\n",
+      "Epoch 9/50\n",
+      "956/956 [==============================] - 4s 4ms/step - loss: 0.2227 - accuracy: 0.9114\n",
+      "Epoch 10/50\n",
+      "956/956 [==============================] - 4s 4ms/step - loss: 0.2191 - accuracy: 0.9113\n",
+      "Epoch 11/50\n",
+      "956/956 [==============================] - 4s 4ms/step - loss: 0.2149 - accuracy: 0.9138\n",
+      "Epoch 12/50\n",
+      "956/956 [==============================] - 4s 4ms/step - loss: 0.2115 - accuracy: 0.9149\n",
+      "Epoch 13/50\n",
+      "956/956 [==============================] - 4s 4ms/step - loss: 0.2078 - accuracy: 0.9144\n",
+      "Epoch 14/50\n",
+      "956/956 [==============================] - 4s 4ms/step - loss: 0.2012 - accuracy: 0.9196\n",
+      "Epoch 15/50\n",
+      "956/956 [==============================] - 4s 4ms/step - loss: 0.1995 - accuracy: 0.9205\n",
+      "Epoch 16/50\n",
+      "956/956 [==============================] - 4s 4ms/step - loss: 0.1950 - accuracy: 0.9225\n",
+      "Epoch 17/50\n",
+      "956/956 [==============================] - 4s 4ms/step - loss: 0.1914 - accuracy: 0.9219\n",
+      "Epoch 18/50\n",
+      "956/956 [==============================] - 4s 4ms/step - loss: 0.1890 - accuracy: 0.9231\n",
+      "Epoch 19/50\n",
+      "956/956 [==============================] - 4s 4ms/step - loss: 0.1846 - accuracy: 0.9265\n",
+      "Epoch 20/50\n",
+      "956/956 [==============================] - 4s 4ms/step - loss: 0.1828 - accuracy: 0.9265\n",
+      "Epoch 21/50\n",
+      "956/956 [==============================] - 4s 4ms/step - loss: 0.1772 - accuracy: 0.9280\n",
+      "Epoch 22/50\n",
+      "956/956 [==============================] - 4s 4ms/step - loss: 0.1740 - accuracy: 0.9298\n",
+      "Epoch 23/50\n",
+      "956/956 [==============================] - 4s 4ms/step - loss: 0.1715 - accuracy: 0.9311\n",
+      "Epoch 24/50\n",
+      "956/956 [==============================] - 4s 4ms/step - loss: 0.1686 - accuracy: 0.9327\n",
+      "Epoch 25/50\n",
+      "956/956 [==============================] - 4s 4ms/step - loss: 0.1639 - accuracy: 0.9342\n",
+      "Epoch 26/50\n",
+      "956/956 [==============================] - 4s 4ms/step - loss: 0.1644 - accuracy: 0.9350\n",
+      "Epoch 27/50\n",
+      "956/956 [==============================] - 4s 4ms/step - loss: 0.1591 - accuracy: 0.9374\n",
+      "Epoch 28/50\n",
+      "956/956 [==============================] - 4s 4ms/step - loss: 0.1534 - accuracy: 0.9373\n",
+      "Epoch 29/50\n",
+      "956/956 [==============================] - 4s 4ms/step - loss: 0.1549 - accuracy: 0.9385\n",
+      "Epoch 30/50\n",
+      "956/956 [==============================] - 4s 4ms/step - loss: 0.1497 - accuracy: 0.9387\n",
+      "Epoch 31/50\n",
+      "956/956 [==============================] - 4s 4ms/step - loss: 0.1477 - accuracy: 0.9399\n",
+      "Epoch 32/50\n",
+      "956/956 [==============================] - 4s 4ms/step - loss: 0.1456 - accuracy: 0.9422\n",
+      "Epoch 33/50\n",
+      "956/956 [==============================] - 4s 4ms/step - loss: 0.1426 - accuracy: 0.9417\n",
+      "Epoch 34/50\n",
+      "956/956 [==============================] - 4s 4ms/step - loss: 0.1416 - accuracy: 0.9439\n",
+      "Epoch 35/50\n",
+      "956/956 [==============================] - 4s 4ms/step - loss: 0.1369 - accuracy: 0.9438\n",
+      "Epoch 36/50\n",
+      "956/956 [==============================] - 4s 4ms/step - loss: 0.1365 - accuracy: 0.9457\n",
+      "Epoch 37/50\n",
+      "956/956 [==============================] - 4s 4ms/step - loss: 0.1345 - accuracy: 0.9467\n",
+      "Epoch 38/50\n",
+      "956/956 [==============================] - 4s 4ms/step - loss: 0.1309 - accuracy: 0.9462\n",
+      "Epoch 39/50\n",
+      "956/956 [==============================] - 4s 4ms/step - loss: 0.1267 - accuracy: 0.9494\n",
+      "Epoch 40/50\n",
+      "956/956 [==============================] - 4s 4ms/step - loss: 0.1298 - accuracy: 0.9497\n",
+      "Epoch 41/50\n",
+      "956/956 [==============================] - 4s 4ms/step - loss: 0.1274 - accuracy: 0.9491\n",
+      "Epoch 42/50\n",
+      "956/956 [==============================] - 4s 4ms/step - loss: 0.1273 - accuracy: 0.9492\n",
+      "Epoch 43/50\n",
+      "956/956 [==============================] - 4s 4ms/step - loss: 0.1235 - accuracy: 0.9506\n",
+      "Epoch 44/50\n",
+      "956/956 [==============================] - 4s 4ms/step - loss: 0.1202 - accuracy: 0.9541\n",
+      "Epoch 45/50\n",
+      "956/956 [==============================] - 4s 4ms/step - loss: 0.1205 - accuracy: 0.9516\n",
+      "Epoch 46/50\n",
+      "956/956 [==============================] - 4s 4ms/step - loss: 0.1182 - accuracy: 0.9515\n",
+      "Epoch 47/50\n",
+      "956/956 [==============================] - 4s 4ms/step - loss: 0.1201 - accuracy: 0.9521\n",
+      "Epoch 48/50\n",
+      "956/956 [==============================] - 4s 4ms/step - loss: 0.1149 - accuracy: 0.9530\n",
+      "Epoch 49/50\n",
+      "956/956 [==============================] - 4s 4ms/step - loss: 0.1179 - accuracy: 0.9543\n",
+      "Epoch 50/50\n",
+      "956/956 [==============================] - 4s 4ms/step - loss: 0.1132 - accuracy: 0.9565\n",
+      "Training completed! Required time: 0:03:12.548906\n"
+     ]
+    }
+   ],
+   "source": [
     "print(\"Training started...\")\n",
     "start = datetime.now()\n",
-    "model.fit(X=X_train, y=y_train)\n",
+    "model.fit(X_train, y_train, epochs=50, batch_size=32)\n",
     "end = datetime.now()\n",
     "print(\"Training completed! Required time: \" + str(end-start))\n",
     "\n",
     "with open(model_filename, 'wb') as f:\n",
-    "    pickle.dump(cl, f)"
+    "    pickle.dump(model, f)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -253,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -264,9 +385,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 83,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "y_test.shape: (63842,)\n"
+     ]
+    }
+   ],
    "source": [
     "y_test = test_set['toxic']\n",
     "print(\"y_test.shape: \" + str(y_test.shape))"
@@ -274,9 +403,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 84,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "X_test.shape: (63842, 768)\n"
+     ]
+    }
+   ],
    "source": [
     "X_test = pd.read_csv(\"./../../datasets/X_test_bert.csv\")\n",
     "print(\"X_test.shape:\", X_test.shape)"
@@ -284,16 +421,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 85,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1996/1996 [==============================] - 2s 1ms/step\n",
+      "[[1.0020149e-10]\n",
+      " [9.9999964e-01]\n",
+      " [7.7222008e-01]\n",
+      " ...\n",
+      " [9.9999946e-01]\n",
+      " [9.9998432e-01]\n",
+      " [5.0431079e-01]]\n",
+      "Accuracy: 0.8348422668462767\n",
+      "Precision: 0.355320392131403\n",
+      "Recall: 0.899129291933629\n"
+     ]
+    }
+   ],
    "source": [
-    "y_pred = cl.predict(X_test)\n",
+    "y_pred = model.predict(X_test)\n",
+    "print(y_pred)\n",
+    "\n",
+    "y_pred_binary = np.where(y_pred > 0.5, 1, 0)\n",
     "\n",
     "#Metriche: Accuracy,Precision,Recall\n",
-    "print(\"Accuracy: \" + str(accuracy_score(y_test, y_pred)))\n",
-    "print(\"Precision: \" + str(precision_score(y_test, y_pred)))\n",
-    "print(\"Recall: \" + str(recall_score(y_test, y_pred)))"
+    "print(\"Accuracy: \" + str(accuracy_score(y_test, y_pred_binary)))\n",
+    "print(\"Precision: \" + str(precision_score(y_test, y_pred_binary)))\n",
+    "print(\"Recall: \" + str(recall_score(y_test, y_pred_binary)))"
    ]
   }
  ],
