Modifica nella creazione del Training Set (Distribuzione: 1/5, 4/5)

--- a/utils/dataset_preprocessing.ipynb
+++ b/utils/dataset_preprocessing.ipynb
@@ -36,8 +36,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_data = pd.read_csv(\"./jigsaw_train_set.csv\")\n",
-    "test_data = pd.read_csv(\"./jigsaw_test_set.csv\")"
+    "train_data = pd.read_csv(\"./../datasets/jigsaw_train_set.csv\")\n",
+    "test_data = pd.read_csv(\"./../datasets/jigsaw_test_set.csv\")"
    ]
   },
   {
@@ -819,15 +819,18 @@
     "    non_toxic_entries = dataset[dataset['toxic'] == 0]\n",
     "    print(\"Numero di Frasi 'toxic': \" + str(len(toxic_entries)) + \", Numero di Frasi 'non-toxic': \" + str(len(non_toxic_entries)))\n",
     "\n",
-    "    non_toxic_downsampled = resample(non_toxic_entries, n_samples=len(toxic_entries), random_state=42)\n",
+    "    n_toxic = int(len(toxic_entries)/5)\n",
     "\n",
-    "    final_training_set = pd.concat([toxic_entries, non_toxic_downsampled])\n",
+    "    toxic_downsampled = resample(toxic_entries, n_samples=n_toxic, random_state=42) \n",
+    "    non_toxic_downsampled = resample(non_toxic_entries, n_samples=4*n_toxic, random_state=42)\n",
+    "\n",
+    "    final_training_set = pd.concat([toxic_downsampled, non_toxic_downsampled])\n",
     "    final_training_set.reset_index(drop=True, inplace=True)\n",
     "\n",
     "    idx_to_remove = list()\n",
     "    for i in range(0, len(final_training_set)):\n",
     "        row = final_training_set.iloc[i]\n",
-    "        if row['comment_text'] is '':\n",
+    "        if row['comment_text'] == '':\n",
     "            idx_to_remove.append(i)\n",
     "  \n",
     "    final_training_set = final_training_set.drop(idx_to_remove)\n",
@@ -861,7 +864,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "training_set.to_csv(\"./training_set.csv\", index=False)"
+    "training_set.to_csv(\"./../datasets/training_set.csv\", index=False)"
    ]
   },
   {
@@ -885,7 +888,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "training_set.to_csv(\"./training_set_lemmatized.csv\", index=False)"
+    "training_set.to_csv(\"./../datasets/training_set_lemmatized.csv\", index=False)"
    ]
   },
   {
@@ -920,7 +923,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "test_data.to_csv(\"./test_set.csv\", index=False)"
+    "test_data.to_csv(\"./../datasets/test_set.csv\", index=False)"
    ]
   },
   {
@@ -966,7 +969,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "test_data.to_csv(\"./test_set_lemmatized.csv\", index=False)"
+    "test_data.to_csv(\"./../datasets/test_set_lemmatized.csv\", index=False)"
    ]
   }
  ],
