--- a/models/bert_boosted/neural_network_classifier.ipynb
+++ b/models/bert_boosted/neural_network_classifier.ipynb
@@ -207,22 +207,41 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train = X_train.toarray()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# define model\n",
-    "model = Sequential()\n",
-    "model.add(Dense(768, input_shape=(768,), activation='relu'))\n",
-    "model.add(Dropout(0.5))  \n",
-    "model.add(Dense(534, activation='relu'))\n",
-    "model.add(Dropout(0.5))  \n",
-    "model.add(Dense(318, activation='relu'))\n",
-    "model.add(Dropout(0.5))  \n",
-    "model.add(Dense(109, activation='relu'))\n",
-    "model.add(Dropout(0.5))  \n",
-    "model.add(Dense(54, activation='relu'))\n",
-    "model.add(Dense(1, activation='sigmoid'))"
+    "# Building the CNN Model\n",
+    "\n",
+    "model = tf.keras.models.Sequential([\n",
+    "tf.keras.layers.Reshape((39767, 1), input_shape=(39767,)),  \n",
+    "tf.keras.layers.Conv1D(filters=45, kernel_size=11, strides=4,\n",
+    "activation='relu',input_shape=(39767, 1)),\n",
+    "tf.keras.layers.MaxPool1D(pool_size=3, strides=2,padding='same'),\n",
+    "tf.keras.layers.Conv1D(filters=125, kernel_size=5, padding='same',\n",
+    "activation='relu'),\n",
+    "tf.keras.layers.MaxPool1D(pool_size=3, strides=2,padding='same'),\n",
+    "tf.keras.layers.Conv1D(filters=150, kernel_size=3, padding='same',\n",
+    "activation='relu'),\n",
+    "tf.keras.layers.Conv1D(filters=125, kernel_size=3, padding='same',\n",
+    "activation='relu'),\n",
+    "tf.keras.layers.Conv1D(filters=60, kernel_size=1, padding='same',\n",
+    "activation='relu'),\n",
+    "tf.keras.layers.Dense(80, activation='relu'),\n",
+    "tf.keras.layers.Dropout(0.5),\n",
+    "tf.keras.layers.Dense(40, activation='relu'),\n",
+    "tf.keras.layers.Dropout(0.5),\n",
+    "tf.keras.layers.Dense(1,activation='sigmoid')\n",
+    "])"
    ]
   },
   {
@@ -232,7 +251,9 @@
    "outputs": [],
    "source": [
     "# compile the keras model\n",
-    "model.compile(loss='binary_crossentropy', optimizer='adam', metrics=['accuracy'])"
+    "model.build()\n",
+    "model.compile(optimizer='adam', loss='binary_crossentropy', metrics=['accuracy'])\n",
+    "model.summary()"
    ]
   },
   {
@@ -352,7 +373,7 @@
    "source": [
     "print(\"Training started...\")\n",
     "start = datetime.now()\n",
-    "model.fit(X_train, y_train, epochs=50, batch_size=32)\n",
+    "model.fit(X_train, y_train, epochs=10, batch_size=32)\n",
     "end = datetime.now()\n",
     "print(\"Training completed! Required time: \" + str(end-start))"
    ]
