--- a/models/base/neural_network_classifier.ipynb
+++ b/models/base/neural_network_classifier.ipynb
@@ -117,99 +117,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "X_train = X_train.toarray()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Building the CNN Model\n",
-    "\n",
-    "model = tf.keras.models.Sequential([\n",
-    "tf.keras.layers.Reshape((39767, 1), input_shape=(39767,)),  \n",
-    "tf.keras.layers.Conv1D(filters=33, kernel_size=11, strides=4,\n",
-    "activation='relu',input_shape=(39767, 1)),\n",
-    "tf.keras.layers.MaxPool1D(pool_size=3, strides=2,padding='same'),\n",
-    "tf.keras.layers.Conv1D(filters=125, kernel_size=5, padding='same',\n",
-    "activation='relu'),\n",
-    "tf.keras.layers.MaxPool1D(pool_size=3, strides=2,padding='same'),\n",
-    "tf.keras.layers.Conv1D(filters=150, kernel_size=3, padding='same',\n",
-    "activation='relu'),\n",
-    "tf.keras.layers.Conv1D(filters=125, kernel_size=3, padding='same',\n",
-    "activation='relu'),\n",
-    "tf.keras.layers.Conv1D(filters=125, kernel_size=1, padding='same',\n",
-    "activation='relu'),\n",
-    "tf.keras.layers.Dense(80, activation='relu'),\n",
-    "tf.keras.layers.Dropout(0.5),\n",
-    "tf.keras.layers.Dense(40, activation='relu'),\n",
-    "tf.keras.layers.Dropout(0.5),\n",
-    "tf.keras.layers.Dense(1,activation='sigmoid')\n",
-    "])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Model: \"sequential_3\"\n",
-      "_________________________________________________________________\n",
-      " Layer (type)                Output Shape              Param #   \n",
-      "=================================================================\n",
-      " reshape_3 (Reshape)         (None, 39767, 1)          0         \n",
-      "                                                                 \n",
-      " conv1d_15 (Conv1D)          (None, 9940, 45)          540       \n",
-      "                                                                 \n",
-      " dropout_8 (Dropout)         (None, 9940, 45)          0         \n",
-      "                                                                 \n",
-      " conv1d_16 (Conv1D)          (None, 9940, 125)         28250     \n",
-      "                                                                 \n",
-      " max_pooling1d_6 (MaxPoolin  (None, 4970, 125)         0         \n",
-      " g1D)                                                            \n",
-      "                                                                 \n",
-      " conv1d_17 (Conv1D)          (None, 4970, 150)         56400     \n",
-      "                                                                 \n",
-      " conv1d_18 (Conv1D)          (None, 4970, 125)         56375     \n",
-      "                                                                 \n",
-      " conv1d_19 (Conv1D)          (None, 4970, 60)          7560      \n",
-      "                                                                 \n",
-      " dense_9 (Dense)             (None, 4970, 80)          4880      \n",
-      "                                                                 \n",
-      " dropout_9 (Dropout)         (None, 4970, 80)          0         \n",
-      "                                                                 \n",
-      " dense_10 (Dense)            (None, 4970, 40)          3240      \n",
-      "                                                                 \n",
-      " dropout_10 (Dropout)        (None, 4970, 40)          0         \n",
-      "                                                                 \n",
-      " dense_11 (Dense)            (None, 4970, 1)           41        \n",
-      "                                                                 \n",
-      "=================================================================\n",
-      "Total params: 157286 (614.40 KB)\n",
-      "Trainable params: 157286 (614.40 KB)\n",
-      "Non-trainable params: 0 (0.00 Byte)\n",
-      "_________________________________________________________________\n"
-     ]
-    }
-   ],
-   "source": [
-    "model.build()\n",
-    "model.compile(optimizer='adam', loss='binary_crossentropy', metrics=['accuracy'])\n",
-    "model.summary()"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
    "outputs": [
@@ -230,6 +137,7 @@
     }
    ],
    "source": [
+    "#Verifica presenza della GPU\n",
     "import tensorflow as tf\n",
     "\n",
     "# Verifica il dispositivo attualmente utilizzato da TensorFlow\n",
@@ -243,7 +151,96 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train = X_train.toarray()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Building the CNN Model\n",
+    "model = tf.keras.models.Sequential([\n",
+    "tf.keras.layers.Reshape((39767, 1), input_shape=(39767,)),  \n",
+    "tf.keras.layers.Conv1D(filters=96, kernel_size=11, strides=4,\n",
+    "activation='relu',input_shape=(39767, 1)),\n",
+    "tf.keras.layers.MaxPool1D(pool_size=3, strides=2,padding='same'),\n",
+    "tf.keras.layers.Conv1D(filters=256, kernel_size=5, padding='same',\n",
+    "activation='relu'),\n",
+    "tf.keras.layers.MaxPool1D(pool_size=3, strides=2,padding='same'),\n",
+    "tf.keras.layers.Conv1D(filters=384, kernel_size=3, padding='same',\n",
+    "activation='relu'),\n",
+    "tf.keras.layers.Conv1D(filters=256, kernel_size=1, padding='same',\n",
+    "activation='relu'),\n",
+    "tf.keras.layers.Dense(155, activation='relu'),\n",
+    "tf.keras.layers.Dropout(0.5),\n",
+    "tf.keras.layers.Dense(40, activation='relu'),\n",
+    "tf.keras.layers.Dropout(0.5),\n",
+    "tf.keras.layers.Dense(1,activation='sigmoid')\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"sequential_10\"\n",
+      "_________________________________________________________________\n",
+      " Layer (type)                Output Shape              Param #   \n",
+      "=================================================================\n",
+      " reshape_11 (Reshape)        (None, 39767, 1)          0         \n",
+      "                                                                 \n",
+      " conv1d_54 (Conv1D)          (None, 9940, 96)          1152      \n",
+      "                                                                 \n",
+      " max_pooling1d_15 (MaxPooli  (None, 4970, 96)          0         \n",
+      " ng1D)                                                           \n",
+      "                                                                 \n",
+      " conv1d_55 (Conv1D)          (None, 4970, 256)         123136    \n",
+      "                                                                 \n",
+      " max_pooling1d_16 (MaxPooli  (None, 2485, 256)         0         \n",
+      " ng1D)                                                           \n",
+      "                                                                 \n",
+      " conv1d_56 (Conv1D)          (None, 2485, 384)         295296    \n",
+      "                                                                 \n",
+      " conv1d_57 (Conv1D)          (None, 2485, 256)         98560     \n",
+      "                                                                 \n",
+      " dense_30 (Dense)            (None, 2485, 155)         39835     \n",
+      "                                                                 \n",
+      " dropout_34 (Dropout)        (None, 2485, 155)         0         \n",
+      "                                                                 \n",
+      " dense_31 (Dense)            (None, 2485, 40)          6240      \n",
+      "                                                                 \n",
+      " dropout_35 (Dropout)        (None, 2485, 40)          0         \n",
+      "                                                                 \n",
+      " dense_32 (Dense)            (None, 2485, 1)           41        \n",
+      "                                                                 \n",
+      "=================================================================\n",
+      "Total params: 564260 (2.15 MB)\n",
+      "Trainable params: 564260 (2.15 MB)\n",
+      "Non-trainable params: 0 (0.00 Byte)\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
+   "source": [
+    "model.build()\n",
+    "model.compile(optimizer='adam',loss='binary_crossentropy',metrics=['accuracy'])\n",
+    "model.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -251,62 +248,12 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/10\n",
-      "478/478 [==============================] - 164s 328ms/step - loss: 0.5190 - accuracy: 0.7998\n",
-      "Epoch 2/10\n",
-      "478/478 [==============================] - 256s 537ms/step - loss: 0.5073 - accuracy: 0.7999\n",
-      "Epoch 3/10\n",
-      "478/478 [==============================] - 129s 269ms/step - loss: 0.5054 - accuracy: 0.7999\n",
-      "Epoch 4/10\n",
-      "478/478 [==============================] - 128s 269ms/step - loss: 0.5044 - accuracy: 0.7999\n",
-      "Epoch 5/10\n",
-      "478/478 [==============================] - 128s 268ms/step - loss: 0.5040 - accuracy: 0.7999\n",
-      "Epoch 6/10\n",
-      "478/478 [==============================] - 128s 269ms/step - loss: 0.5031 - accuracy: 0.7999\n",
-      "Epoch 7/10\n",
-      "478/478 [==============================] - 130s 272ms/step - loss: 0.5029 - accuracy: 0.7999\n",
-      "Epoch 8/10\n",
-      "478/478 [==============================] - 130s 272ms/step - loss: 0.5022 - accuracy: 0.7999\n",
-      "Epoch 9/10\n",
-      "478/478 [==============================] - 132s 275ms/step - loss: 0.5020 - accuracy: 0.7999\n",
-      "Epoch 10/10\n",
-      "478/478 [==============================] - 132s 275ms/step - loss: 0.5018 - accuracy: 0.7999\n"
+      "182/478 [==========>...................] - ETA: 2:17 - loss: 0.5231 - accuracy: 0.8063"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<keras.src.callbacks.History at 0x2a3a9b910>"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
     "model.fit(X_train, y_train, epochs=10, batch_size=32)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Python platform: macOS-14.0-arm64-arm-64bit\n",
-      "Tensorflow version: 2.15.0\n",
-      "[PhysicalDevice(name='/physical_device:GPU:0', device_type='GPU')]\n"
-     ]
-    }
-   ],
-   "source": [
-    "import platform\n",
-    "print(f\"Python platform: {platform.platform()}\")\n",
-    "print(f\"Tensorflow version: {tf.__version__}\")\n",
-    "print(tf.config.list_physical_devices('GPU'))"
    ]
   },
   {
@@ -317,6 +264,91 @@
    "source": [
     "with open(model_filename, 'wb') as f:\n",
     "    pickle.dump(model, f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(model_filename, 'rb') as f:\n",
+    "    model = pickle.load(f)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Testing del Sistema, Dataset \"Non Lemmatizzato\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_data = pd.read_csv(\"./../../datasets/test_set.csv\")\n",
+    "test_data.dropna(inplace=True)\n",
+    "test_set = test_data[test_data['toxic'] != -1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_test = test_set['toxic']\n",
+    "print(\"y_test.shape: \" + str(y_test.shape))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_test = pd.read_csv(\"./../../datasets/X_test_bert.csv\")\n",
+    "print(\"X_test.shape:\", X_test.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_pred = model.predict(X_test)\n",
+    "print(y_pred)\n",
+    "\n",
+    "y_pred_binary = np.where(y_pred > 0.5, 1, 0)\n",
+    "\n",
+    "#Metriche: Accuracy,Precision,Recall\n",
+    "print(\"Accuracy: \" + str(accuracy_score(y_test, y_pred_binary)))\n",
+    "print(\"Precision: \" + str(precision_score(y_test, y_pred_binary)))\n",
+    "print(\"Recall: \" + str(recall_score(y_test, y_pred_binary)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "conf_matrix = confusion_matrix(y_test, y_pred_binary)\n",
+    "\n",
+    "# Definisci le etichette delle classi\n",
+    "classes = ['Classe Negativa', 'Classe Positiva']\n",
+    "\n",
+    "# Plotta la matrice di confusione\n",
+    "plt.figure(figsize=(6, 5))\n",
+    "sns.heatmap(conf_matrix, annot=True, fmt=\"d\", cmap=\"Blues\", xticklabels=classes, yticklabels=classes)\n",
+    "plt.xlabel('Predicted')\n",
+    "plt.ylabel('True')\n",
+    "plt.title('Matrice di Confusione')\n",
+    "plt.show()"
    ]
   },
   {
@@ -355,6 +387,118 @@
     "print(\"y_train.shape: \" + str(y_train.shape))\n",
     "print(\"X_train_lem.shape: \" + str(X_train_lem.shape))\n",
     "print(\"X_test_lem.shape: \" + str(X_test_lem.shape))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Addestramento del Modello"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Verifica presenza della GPU\n",
+    "import tensorflow as tf\n",
+    "\n",
+    "# Verifica il dispositivo attualmente utilizzato da TensorFlow\n",
+    "device_name = tf.test.gpu_device_name()\n",
+    "\n",
+    "if device_name == '/device:GPU:0':\n",
+    "    print('GPU disponibile, TensorFlow sta utilizzando la GPU.')\n",
+    "else:\n",
+    "    print('GPU non disponibile, TensorFlow sta utilizzando la CPU.')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train_lem = X_train_lem.toarray()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Building the CNN Model\n",
+    "\n",
+    "model = tf.keras.models.Sequential([\n",
+    "tf.keras.layers.Reshape((39767, 1), input_shape=(39767,)),  \n",
+    "tf.keras.layers.Conv1D(filters=96, kernel_size=11, strides=4,\n",
+    "activation='relu',input_shape=(39767, 1)),\n",
+    "tf.keras.layers.Dropout(0.5),\n",
+    "tf.keras.layers.Conv1D(filters=120, kernel_size=5, padding='same',\n",
+    "activation='relu'),\n",
+    "tf.keras.layers.Conv1D(filters=240, kernel_size=3, padding='same',\n",
+    "activation='relu'),\n",
+    "tf.keras.layers.Dropout(0.5),\n",
+    "tf.keras.layers.Conv1D(filters=300, kernel_size=3, padding='same',\n",
+    "activation='relu'),\n",
+    "tf.keras.layers.Conv1D(filters=150, kernel_size=1, padding='same',\n",
+    "activation='relu'),\n",
+    "tf.keras.layers.MaxPool1D(pool_size=3, strides=2,padding='same'),\n",
+    "tf.keras.layers.Dense(80, activation='relu'),\n",
+    "tf.keras.layers.Dropout(0.5),\n",
+    "tf.keras.layers.Dense(40, activation='relu'),\n",
+    "tf.keras.layers.Dropout(0.5),\n",
+    "tf.keras.layers.Dense(1,activation='sigmoid')\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.build()\n",
+    "model.compile(optimizer='adam',loss='binary_crossentropy',metrics=['accuracy'])\n",
+    "model.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.fit(X_train_lem, y_train, epochs=10, batch_size=32)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(model_filename, 'wb') as f:\n",
+    "    pickle.dump(model, f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(model_filename, 'rb') as f:\n",
+    "    model = pickle.load(f)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Testing del Sistema, Dataset \"Non Lemmatizzato\""
    ]
   }
  ],
