refactor 3 nn_bert_based e nn

--- a/models/base/neural_network_classifier.ipynb
+++ b/models/base/neural_network_classifier.ipynb
@@ -160,22 +160,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Building the CNN Model\n",
     "model = tf.keras.models.Sequential([\n",
     "tf.keras.layers.Reshape((39767, 1), input_shape=(39767,)),  \n",
-    "tf.keras.layers.Conv1D(filters=96, kernel_size=11, strides=4,\n",
+    "tf.keras.layers.Conv1D(filters=25, kernel_size=11, strides=4,\n",
     "activation='relu',input_shape=(39767, 1)),\n",
     "tf.keras.layers.MaxPool1D(pool_size=3, strides=2,padding='same'),\n",
-    "tf.keras.layers.Conv1D(filters=256, kernel_size=5, padding='same',\n",
+    "tf.keras.layers.Conv1D(filters=65, kernel_size=5, padding='same',\n",
     "activation='relu'),\n",
     "tf.keras.layers.MaxPool1D(pool_size=3, strides=2,padding='same'),\n",
-    "tf.keras.layers.Conv1D(filters=384, kernel_size=3, padding='same',\n",
+    "tf.keras.layers.Conv1D(filters=70, kernel_size=3, padding='same',\n",
     "activation='relu'),\n",
-    "tf.keras.layers.Conv1D(filters=256, kernel_size=1, padding='same',\n",
+    "tf.keras.layers.Conv1D(filters=60, kernel_size=1, padding='same',\n",
     "activation='relu'),\n",
     "tf.keras.layers.Dense(155, activation='relu'),\n",
     "tf.keras.layers.Dropout(0.5),\n",
@@ -187,46 +187,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: \"sequential_10\"\n",
+      "Model: \"sequential_11\"\n",
       "_________________________________________________________________\n",
       " Layer (type)                Output Shape              Param #   \n",
       "=================================================================\n",
-      " reshape_11 (Reshape)        (None, 39767, 1)          0         \n",
+      " reshape_12 (Reshape)        (None, 39767, 1)          0         \n",
       "                                                                 \n",
-      " conv1d_54 (Conv1D)          (None, 9940, 96)          1152      \n",
+      " conv1d_58 (Conv1D)          (None, 9940, 25)          300       \n",
       "                                                                 \n",
-      " max_pooling1d_15 (MaxPooli  (None, 4970, 96)          0         \n",
+      " max_pooling1d_17 (MaxPooli  (None, 4970, 25)          0         \n",
       " ng1D)                                                           \n",
       "                                                                 \n",
-      " conv1d_55 (Conv1D)          (None, 4970, 256)         123136    \n",
+      " conv1d_59 (Conv1D)          (None, 4970, 65)          8190      \n",
       "                                                                 \n",
-      " max_pooling1d_16 (MaxPooli  (None, 2485, 256)         0         \n",
+      " max_pooling1d_18 (MaxPooli  (None, 2485, 65)          0         \n",
       " ng1D)                                                           \n",
       "                                                                 \n",
-      " conv1d_56 (Conv1D)          (None, 2485, 384)         295296    \n",
+      " conv1d_60 (Conv1D)          (None, 2485, 70)          13720     \n",
       "                                                                 \n",
-      " conv1d_57 (Conv1D)          (None, 2485, 256)         98560     \n",
+      " conv1d_61 (Conv1D)          (None, 2485, 60)          4260      \n",
       "                                                                 \n",
-      " dense_30 (Dense)            (None, 2485, 155)         39835     \n",
+      " dense_33 (Dense)            (None, 2485, 155)         9455      \n",
       "                                                                 \n",
-      " dropout_34 (Dropout)        (None, 2485, 155)         0         \n",
+      " dropout_36 (Dropout)        (None, 2485, 155)         0         \n",
       "                                                                 \n",
-      " dense_31 (Dense)            (None, 2485, 40)          6240      \n",
+      " dense_34 (Dense)            (None, 2485, 40)          6240      \n",
       "                                                                 \n",
-      " dropout_35 (Dropout)        (None, 2485, 40)          0         \n",
+      " dropout_37 (Dropout)        (None, 2485, 40)          0         \n",
       "                                                                 \n",
-      " dense_32 (Dense)            (None, 2485, 1)           41        \n",
+      " dense_35 (Dense)            (None, 2485, 1)           41        \n",
       "                                                                 \n",
       "=================================================================\n",
-      "Total params: 564260 (2.15 MB)\n",
-      "Trainable params: 564260 (2.15 MB)\n",
+      "Total params: 42206 (164.87 KB)\n",
+      "Trainable params: 42206 (164.87 KB)\n",
       "Non-trainable params: 0 (0.00 Byte)\n",
       "_________________________________________________________________\n"
      ]
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +248,15 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/10\n",
-      "182/478 [==========>...................] - ETA: 2:17 - loss: 0.5231 - accuracy: 0.8063"
+      "478/478 [==============================] - 88s 170ms/step - loss: 0.5179 - accuracy: 0.7998\n",
+      "Epoch 2/10\n",
+      "478/478 [==============================] - 80s 167ms/step - loss: 0.5086 - accuracy: 0.7999\n",
+      "Epoch 3/10\n",
+      "478/478 [==============================] - 79s 165ms/step - loss: 0.5077 - accuracy: 0.7999\n",
+      "Epoch 4/10\n",
+      "478/478 [==============================] - 82s 171ms/step - loss: 0.5061 - accuracy: 0.7999\n",
+      "Epoch 5/10\n",
+      " 20/478 [>.............................] - ETA: 1:15 - loss: 0.5065 - accuracy: 0.8016"
      ]
     }
    ],
@@ -432,7 +440,7 @@
     "# Building the CNN Model\n",
     "\n",
     "model = tf.keras.models.Sequential([\n",
-    "tf.keras.layers.Reshape((39767, 1), input_shape=(39767,)),  \n",
+    "tf.keras.layers.Reshape((34238, 1), input_shape=(34238,)),  \n",
     "tf.keras.layers.Conv1D(filters=96, kernel_size=11, strides=4,\n",
     "activation='relu',input_shape=(39767, 1)),\n",
     "tf.keras.layers.Dropout(0.5),\n",
