Correzione sul Path di Scrittura dei File elaborati con BERT

--- a/utils/feature_extraction_bert_mac.ipynb
+++ b/utils/feature_extraction_bert_mac.ipynb
@@ -270,7 +270,7 @@
     "print(\"Extraction completed! Required Time:\", str(end-start))\n",
     "print(X_train)\n",
     "\n",
-    "X_train.to_csv(\"./X_train_bert.csv\", index=False)"
+    "X_train.to_csv(\"./../datasets/X_train_bert.csv\", index=False)"
    ]
   },
   {
@@ -308,7 +308,7 @@
     "print(\"Extraction completed! Required Time:\", str(end-start))\n",
     "print(\"X_test.shape:\", X_test.shape)\n",
     "\n",
-    "X_test.to_csv(\"./X_test.csv_bert\", index=False)"
+    "X_test.to_csv(\"./../datasets/X_test.csv_bert\", index=False)"
    ]
   }
  ],
