--- a/utils/feature_extraction_bert_windows.ipynb
+++ b/utils/feature_extraction_bert_windows.ipynb
@@ -176,7 +176,7 @@
     "print(\"Extraction completed! Required Time:\", str(end-start))\n",
     "print(\"X_train.shape:\", X_train.shape)\n",
     "\n",
-    "X_train.to_csv(\"./X_train_bert.csv\", index=False)"
+    "X_train.to_csv(\"./../datasets/X_train_bert.csv\", index=False)"
    ]
   },
   {
@@ -214,7 +214,7 @@
     "print(\"Extraction completed! Required Time:\", str(end-start))\n",
     "print(\"X_test.shape:\", X_test.shape)\n",
     "\n",
-    "X_test.to_csv(\"./X_test_bert.csv\", index=False)"
+    "X_test.to_csv(\"./../datasets/X_test_bert.csv\", index=False)"
    ]
   }
  ],
